--- a/code.html
+++ b/code.html
@@ -11,19 +11,19 @@
   </head>
   <body>
        <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #004a80;">
-         <a class="navbar-brand" href="#">Taco Cat</a>
+         <a class="navbar-brand" href="index.html">Taco Cat</a>
          <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
              aria-expanded="false" aria-label="Toggle navigation"></button>
          <div class="collapse navbar-collapse" id="collapsibleNavId">
              <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                 <li class="nav-item active">
-                     <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                 <li class="nav-item">
+                     <a class="nav-link" href="index.html">Home</a>
                  </li>
                  <li class="nav-item">
                      <a class="nav-link" href="solve.html">Solve </a>
                  </li>
-                 <li class="nav-item">
-                    <a class="nav-link" href="#">Code</a>
+                 <li class="nav-item active">
+                    <a class="nav-link" href="#">Code<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="https://feeltheburn.netlify.app/">Portfolio</a>
@@ -35,16 +35,17 @@
          </div>
      </nav> 
 
-     <div class="jumbotron jumbotron-fluid" style="background-color:wheat;">
+     <div class="jumbotron jumbotron-fluid" style="background-color:#bce7e9;">
          <div class="container">
              <h1 class="display-3">Code</h1>
              <p class="lead">He's a Cat. He eats Tacos!!!</p>
              <hr class="my-2">
-             <p>Just a duick demo. Feel free to click through the pages.</p>
-             <p class="lead">
-                 <a class="btn btn-primary btn-lg" href="Jumbo action link" role="button">Jumbo action name</a>
-             </p>
+             <p>Do you like tacos?</p>
          </div>
+     </div>
+     <!---find a  way to insert "Rick" in modal-->
+         
+         
      </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
