--- a/index.html
+++ b/index.html
@@ -35,17 +35,15 @@
          </div>
      </nav> 
 
-     <div class="jumbotron jumbotron-fluid" style="background-color:wheat;">
+     <div class="jumbotron jumbotron-fluid" style="background-color:#bce7e9;">
          <div class="container">
              <h1 class="display-3">Welcome to Taco Cat</h1>
              <p class="lead">He's a Cat. He eats Tacos!!!</p>
              <hr class="my-2">
-             <p>Just a duick demo. Feel free to click through the pages.</p>
-             <p class="lead">
-                 <a class="btn btn-primary btn-lg" href="Jumbo action link" role="button">Jumbo action name</a>
-             </p>
+             <p>Just a quick demo. Feel free to click through the pages.</p>
          </div>
      </div>
+     b4
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
