--- a/solve.html
+++ b/solve.html
@@ -11,16 +11,16 @@
   </head>
   <body>
        <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #004a80;">
-         <a class="navbar-brand" href="#">Taco Cat</a>
+         <a class="navbar-brand" href="index.html">Taco Cat</a>
          <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
              aria-expanded="false" aria-label="Toggle navigation"></button>
          <div class="collapse navbar-collapse" id="collapsibleNavId">
              <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                 <li class="nav-item active">
-                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                 </li>
                  <li class="nav-item">
-                     <a class="nav-link" href="#">Solve </a>
+                     <a class="nav-link" href="index.html">Home </a>
+                 </li>
+                 <li class="nav-item active">
+                     <a class="nav-link" href="#">Solve<span class="sr-only">(current)</span> </a>
                  </li>
                  <li class="nav-item">
                     <a class="nav-link" href="code.html">Code</a>
@@ -35,20 +35,15 @@
          </div>
      </nav> 
 
-     <div class="jumbotron jumbotron-fluid" style="background-color:wheat;">
+     <div class="jumbotron jumbotron-fluid" style="background-color:#bce7e9;">
          <div class="container">
              <h1 class="display-3">Solve</h1>
-             <p class="lead">He's a Cat. He eats Tacos!!!</p>
+             <p class="lead">Is it a palindrome?</p>
              <hr class="my-2">
-             <p>Just a duick demo. Feel free to click through the pages.</p>
-             <p class="lead">
-                 <a class="btn btn-primary btn-lg" href="Jumbo action link" role="button">Jumbo action name</a>
-             </p>
+             <p>Type your text in the space below, and Taco Cat will determine if you have a palindrome.</p>
          </div>
      </div>
-
-     <hr>
-     <br>
+     
      <div class="container">
         <div class="row">
             <!-- input -->
